--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "languages": "^0.1.3",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "3.3.2",
+    "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.1.7",
+    "@types/react": "18.2.6",
+    "prettier": "2.8.8",
+    "tailwind-scrollbar": "^3.0.4"
   }
 }
