--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^10.12.17",
     "languages": "^0.1.3",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.11.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
