--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.12.17",
     "languages": "^0.1.3",
     "next": "13.4.2",
+    "next-i18next": "^14.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
