--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "accept-language": "^3.0.18",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.17",
+    "i18next": "^23.2.11",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-resources-to-backend": "^1.1.4",
     "languages": "^0.1.3",
     "next": "13.4.2",
     "next-i18next": "^14.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.8.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.11.1",
