--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.11.1",
     "tailwind-scrollbar-hide": "^1.1.7",
