--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
+    "daisyui": "^3.6.1",
     "prettier": "2.8.8",
     "tailwind-scrollbar": "^3.0.4"
   }
