--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.11.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
+    "typed.js": "^2.0.16",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
